# rust-serverless-example

./: Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
