[package]
name = "rust-serverless-example"
version = "0.1.0"
authors = ["Stefan Weisser <stefan.weisser@googlemail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"

serde = "^1"
serde_derive = "^1"
serde_json = "^1"
#log = "^0.4"

#simple-error = "^0.1"
#simple_logger = "^1"
chrono = { version = "0.4.15", features = ["serde"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
